Fix some layout issues. Add partial display of Zidoo watched/unwatched status for admin user. Pre-fetch user watched/unwatched status in full library JSON. Add last_watched field for user watched/unwatched table.

--- a/src/app/bonus-view/bonus-view.component.scss
+++ b/src/app/bonus-view/bonus-view.component.scss
@@ -41,7 +41,8 @@
       background-color: rgba(black, 60%);
       display: flex;
       gap: 1em;
-      padding: 1em;
+      padding: 1em 2.5em 1em 1em;
+      position: relative;
       margin: 0.5em 0;
 
       a {
@@ -53,8 +54,9 @@
     .show-watched {
       cursor: pointer;
       font-size: 2em;
-      position: relative;
-      top: -0.1em;
+      position: absolute;
+      right: 0.25em;
+      top: 0.45em;
     }
   }
 }
