--- a/src/app/show-view/show-view.component.scss
+++ b/src/app/show-view/show-view.component.scss
@@ -116,6 +116,14 @@
         top: 0.25em;
       }
 
+      .show-watched-admin {
+        color: #0A0;
+        font-size: 2em;
+        position: absolute;
+        right: 1.25em;
+        top: 0.25em;
+      }
+
       .show-title {
         font-size: 2em;
       }
